--- a/lambda-image-support/HelloWorldFunction/Dockerfile
+++ b/lambda-image-support/HelloWorldFunction/Dockerfile
@@ -1,4 +1,4 @@
-FROM amd64/maven as build-image
+FROM arm64v8/maven as build-image
 
 WORKDIR "/task"
 COPY src/ src/
@@ -7,7 +7,7 @@ COPY pom.xml ./
 RUN mvn -q clean install
 RUN mvn dependency:copy-dependencies -DincludeScope=compile
 
-FROM public.ecr.aws/lambda/java:11
+FROM public.ecr.aws/lambda/java:11-arm64
 
 COPY --from=build-image /task/target/classes /var/task/
 COPY --from=build-image /task/target/dependency /var/task/lib
